Fix ids, names, and actions in register view template

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,11 +8,11 @@
         <p>ryanneeki's custom authentication and identity management system</p>
         <h2>Login</h2>
         <p>Please provide your credentials (email and password) below to create your account</p>
-        <form method="POST" action="/login">
-            <label for="login-email">Email</label>
-            <input type="email" name="login-email" id="login-email" />
-            <label for="login-password">Password</label>
-            <input type="password" name="login-password" id="login-password" />
+        <form method="POST" action="/register">
+            <label for="register-email">Email</label>
+            <input type="email" name="regsiter-email" id="regsiter-email" />
+            <label for="regsiter-password">Password</label>
+            <input type="password" name="register-password" id="register-password" />
             <button type="submit">Create Account</button>
         </form>
     </body>
