--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,9 +10,9 @@
         <p>Please provide your credentials (email and password) below to login to the system</p>
         <form method="POST" action="/login">
             <label for="login-email">Email</label>
-            <input type="email" name="login-email" id="login-email" />
+            <input type="email" name="login-email" id="login-email" required/>
             <label for="login-password">Password</label>
-            <input type="password" name="login-password" id="login-password" />
+            <input type="password" name="login-password" id="login-password" required/>
             <button type="submit">Login</button>
         </form>
     </body>
