--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,12 +8,16 @@
         <p>ryanneeki's custom authentication and identity management system</p>
         <h2>Login</h2>
         <p>Please provide your credentials (email and password) below to login to the system</p>
+        <% if(messages.error){ %>
+            <p style="color: brown;"><%= messages.error %></p>
+        <% } %>
         <form method="POST" action="/login">
             <label for="login-email">Email</label>
-            <input type="email" name="login-email" id="login-email" required/>
+            <input type="email" name="email" id="login-email" required/>
             <label for="login-password">Password</label>
-            <input type="password" name="login-password" id="login-password" required/>
+            <input type="password" name="password" id="login-password" required/>
             <button type="submit">Login</button>
         </form>
+        <p>Don't have an account? <a href='/register'>Create one!</a></p>
     </body>
 </html>
