--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,9 +10,9 @@
         <p>Please provide your credentials (email and password) below to create your account</p>
         <form method="POST" action="/register">
             <label for="register-email">Email</label>
-            <input type="email" name="regsiter-email" id="regsiter-email" required/>
+            <input type="email" name="email" id="regsiter-email" required/>
             <label for="regsiter-password">Password</label>
-            <input type="password" name="register-password" id="register-password" required/>
+            <input type="password" name="password" id="register-password" required/>
             <button type="submit">Create Account</button>
         </form>
     </body>
